[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text8-beta-diffusion"
version = "0.1.0"
description = "Discrete diffusion on text8 with per-token Beta masking (modularized repo)"
authors = [{name="Nathan Project"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "POT>=0.9.3",
    "numba>=0.57",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text8_beta_diffusion*"]
